script/test/fixtures/network-policies/compose.yaml

networks:
  web:

services:
  nginx:
    image: nginx
    ports:
      - 80:80
    networks:
    - web
